--- a/public/images/fontcustom/fontcustom-preview.html
+++ b/public/images/fontcustom/fontcustom-preview.html
@@ -141,11 +141,11 @@
 
       @font-face {
   font-family: "fontcustom";
-  src: url("./fontcustom_a7dbfaea743a090e6a1c6b3d50ce34de.eot");
-  src: url("./fontcustom_a7dbfaea743a090e6a1c6b3d50ce34de.eot?#iefix") format("embedded-opentype"),
-       url("./fontcustom_a7dbfaea743a090e6a1c6b3d50ce34de.woff") format("woff"),
-       url("./fontcustom_a7dbfaea743a090e6a1c6b3d50ce34de.ttf") format("truetype"),
-       url("./fontcustom_a7dbfaea743a090e6a1c6b3d50ce34de.svg#fontcustom") format("svg");
+  src: url("./fontcustom_73a546480a830a139cc739e171237de2.eot");
+  src: url("./fontcustom_73a546480a830a139cc739e171237de2.eot?#iefix") format("embedded-opentype"),
+       url("./fontcustom_73a546480a830a139cc739e171237de2.woff") format("woff"),
+       url("./fontcustom_73a546480a830a139cc739e171237de2.ttf") format("truetype"),
+       url("./fontcustom_73a546480a830a139cc739e171237de2.svg#fontcustom") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -153,7 +153,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "fontcustom";
-    src: url("./fontcustom_a7dbfaea743a090e6a1c6b3d50ce34de.svg#fontcustom") format("svg");
+    src: url("./fontcustom_73a546480a830a139cc739e171237de2.svg#fontcustom") format("svg");
   }
 }
 
@@ -164,6 +164,7 @@
 .icon-chat:before,
 .icon-chat-02:before,
 .icon-close:before,
+.icon-insta:before,
 .icon-movie:before,
 .icon-photo:before,
 .icon-play:before,
@@ -186,6 +187,7 @@
 .icon-chat:before { content: "\f101"; }
 .icon-chat-02:before { content: "\f102"; }
 .icon-close:before { content: "\f103"; }
+.icon-insta:before { content: "\f109"; }
 .icon-movie:before { content: "\f104"; }
 .icon-photo:before { content: "\f105"; }
 .icon-play:before { content: "\f106"; }
@@ -205,7 +207,7 @@
   <body class="characters-off">
     <div id="page" class="container">
       <header>
-        <h1>fontcustom contains 8 glyphs:</h1>
+        <h1>fontcustom contains 9 glyphs:</h1>
         <a onclick="toggleCharacters(); return false;" href="#">Toggle Preview Characters</a>
       </header>
 
@@ -259,6 +261,19 @@
         <div class="usage">
           <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".icon-close" />
           <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf103;" />
+        </div>
+      </div>
+      
+      <div class="glyph">
+        <div class="preview-glyphs">
+          <span class="step size-12"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span><span class="step size-14"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span><span class="step size-16"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span><span class="step size-18"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span><span class="step size-21"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span><span class="step size-24"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span><span class="step size-36"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span><span class="step size-48"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span><span class="step size-60"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span><span class="step size-72"><span class="letters">Pp</span><i id="icon-insta" class="icon-insta"></i></span>
+        </div>
+        <div class="preview-scale">
+          <span class="step">12</span><span class="step">14</span><span class="step">16</span><span class="step">18</span><span class="step">21</span><span class="step">24</span><span class="step">36</span><span class="step">48</span><span class="step">60</span><span class="step">72</span>
+        </div>
+        <div class="usage">
+          <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".icon-insta" />
+          <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf109;" />
         </div>
       </div>
       
